# bromo

./: README.md  pyproject.toml  run_inference.sh
src/bromo/: assign_labels.py  benchmark_runtime.py  data.py  eval.py  generate_pairs.py  model.py  model_inferface.py  model_interface.py  rank_peptides.py  readme.md  run_model.py  subsample_runs_experiment.py  xgboost_baseline.py
src/bromo/evaluations/: tka.py  utils.py
