[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bromo"
version = "0.1.0"
description = "Deep learning model for prioritizing peptides in targeted mass spectrometry experiments"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "optuna>=3.0.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "torch>=2.0.0",
    "tqdm>=4.62.0",
    "xgboost>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
