[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bromo"
version = "0.1.0"
description = "Deep learning model for prioritizing peptides in targeted mass spectrometry experiments"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "optuna>=3.0.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "torch>=2.0.0",
    "tqdm>=4.62.0",
    "xgboost>=1.6.0",
    "adjustText>=0.8",
    "seaborn>=0.11.0",
    "joblib>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
notebook = [
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
]

[project.scripts]
bromo-assign-labels = "bromo.assign_labels:assign_labels"
bromo-train = "bromo.train:main"
bromo-eval = "bromo.eval:main"
bromo-xgboost = "bromo.xgboost_baseline:main"
bromo-subsample = "bromo.subsample_runs_experiment:main"

[tool.setuptools.packages.find]
where = ["src"]
